--- a/manifest.json
+++ b/manifest.json
@@ -9,16 +9,16 @@
   "action": {
     "default_popup": "index.html",
     "default_icon": {
-      "16": "/images/16.png",
-      "32": "/images/32.png",
-      "48": "/images/48.png",
-      "128": "/images/128.png"
+      "16": "/assets/img/16.png",
+      "32": "/assets/img/32.png",
+      "48": "/assets/img/48.png",
+      "128": "/assets/img/128.png"
     }
   },
   "icons": {
-    "16": "/images/16.png",
-    "32": "/images/32.png",
-    "48": "/images/48.png",
-    "128": "/images/128.png"
+    "16": "/assets/img/16.png",
+    "32": "/assets/img/32.png",
+    "48": "/assets/img/48.png",
+    "128": "/assets/img/128.png"
   }
 }
